2020-12-17 Zengchao XU <xuzengchao@sjtu.edu.cn>

* Update the documentation.
* Add vignette.