@@ -1,7 +1,7 @@
 Package: PLFD
 Type: Package
 Title: Portmanteau Local Feature Discrimination for Matrix-Variate Data
-Version: 0.9.1
+Version: 0.9.2
 Date: 2020-12-22
 Authors@R: c(
     person("Zengchao", "Xu", role = c("aut", "cre"), email = "xuzengchao@sjtu.edu.cn"),
@@ -21,5 +21,7 @@ Encoding: UTF-8
 RoxygenNote: 7.1.1
 Suggests: 
     knitr,
-    rmarkdown
+    rmarkdown,
+    mathjaxr
+RdMacros: mathjaxr
 VignetteBuilder: knitr
