@@ -1,16 +1,11 @@
 ## Dependencies
 
 * `R > 3.5.0`
-* If you would like to install `PLFD` from source on win-platform, ensure that the [Rtools](https://cran.r-project.org/bin/windows/Rtools/) is deployed well. 
+* To install `PLFD` from source on win-platform, please ensure that the [Rtools](https://cran.r-project.org/bin/windows/Rtools/) is deployed well. 
 
 ## Installation
 
-Compiled version of `PLFD` is not yet released on [CRAN](https://cran.r-project.org/). You can install it from source within R via
-```R
-library(remotes)
-install_git("https://gitee.com/xu-zc/PLFD.git")
-```
-or install with a vignette 
+Install from source:
 ```R
 library(remotes)
 install_git("https://gitee.com/xu-zc/PLFD.git", build_vignettes=TRUE)
