@@ -42,13 +42,6 @@ dim(xTest) <- c(rDim, cDim, n1Test+n2Test)
 yTest <- c(rep(1, n1Test), rep(2, n2Test))
 
 r0 <- c0 <- 5
-system.time(plfd.model <- plfd(x1, x2, r0, c0, xtest=xTest, ytest=yTest))
-
+plfd.model <- plfd(x1, x2, r0, c0, xtest=xTest, ytest=yTest)
 print(plfd.model)
-```
-
-The target environment is listed below.
-
-```{r sessionInfo}
-sessionInfo()
 ```
